logs/logfile.log
Internal Server Error: /admin/
Traceback (most recent call last):
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/handlers/base.py", line 103, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/urlresolvers.py", line 319, in resolve
    for pattern in self.url_patterns:
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/urlresolvers.py", line 347, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/urlresolvers.py", line 342, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/utils/importlib.py", line 35, in import_module
    __import__(name)
  File "/home/panser/virtualenv/EnvDjango3/projects/pymysite/mysite/urls.py", line 4
    from django.contrib import admin
   ^
IndentationError: unexpected indent
Internal Server Error: /admin/
Traceback (most recent call last):
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/handlers/base.py", line 103, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/urlresolvers.py", line 319, in resolve
    for pattern in self.url_patterns:
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/urlresolvers.py", line 347, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/core/urlresolvers.py", line 342, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/utils/importlib.py", line 35, in import_module
    __import__(name)
  File "/home/panser/virtualenv/EnvDjango3/projects/pymysite/mysite/urls.py", line 16, in <module>
    url(r'^admin/', include(admin.site.urls)),
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/contrib/admin/sites.py", line 257, in urls
    return self.get_urls(), self.app_name, self.name
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/contrib/admin/sites.py", line 215, in get_urls
    self.check_dependencies()
  File "/home/panser/virtualenv/EnvDjango3/lib/python2.7/site-packages/django/contrib/admin/sites.py", line 162, in check_dependencies
    raise ImproperlyConfigured("Put 'django.contrib.admin' in your "
ImproperlyConfigured: Put 'django.contrib.admin' in your INSTALLED_APPS setting in order to use the admin application.
